crates/compiler/cypress/tests/snapshots/test_parse__newline_and_spaces_before_less_than_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "x =\n    1\n    < 2\n\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginBlock
                (*
                    HintExpr
                    Num=>Int@2
                    InlineBinOpLessThan=>OpLessThan@3
                    Num=>Int@4
                EndBinOpLessThan)
            EndBlock)
        EndAssignDecl)
        HintExpr
        Num=>Int@5
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("x"), Block([BinOp(IntBase10("1"), LessThan, IntBase10("2"))]))
IntBase10("42")

[=== formatted below ===]

