crates/compiler/cypress/tests/snapshots/test_parse__newline_in_type_def_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "R\n:D\na\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginTypeOrTypeAlias
            UpperIdent=>UpperIdent@0
            InlineTypeColon=>OpColon@1
            TypeName=>UpperIdent@2
        EndTypeOrTypeAlias)
        HintExpr
        Ident=>LowerIdent@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
TypeAlias(UpperIdent("R"), Name("D"))
Ident("a")

[=== formatted below ===]

