crates/compiler/cypress/tests/snapshots/test_parse__newline_singleton_list_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "[\n1\n]\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr (BeginList Num=>Int@1 EndList) EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
List([IntBase10("1")])

[=== formatted below ===]
[1]
